# RED

./: .gitmodules  CMakeLists.txt
assets/Shaders/: Sprite.vert.dxil  Sprite.vert.hlsl  Sprite.vert.spv
include/: GameCommon.h
include/Battle/: Actor2DBattle.h  BattleGameState.h
include/Common/Gameplay/: Actor.h  Actor2D.h  GameState.h
include/Common/Gameplay/Battle/: Actor2DBattle.h
include/Common/Rendering/: LazyTexture.h  RenderManager.h
src/: GameCommon.cpp  main.cpp
src/Battle/: Actor2DBattle.cpp  BattleGameState.cpp
src/Common/Gameplay/: Actor.cpp  Actor2D.cpp  Component.cpp  GameState.cpp
src/Common/Gameplay/Battle/: Actor2DBattle.cpp
src/Rendering/: LazyTexture.cpp  RenderManager.cpp
